--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <h4>&lt;- drag this letter to create name </h4>
     <h4>Bin unwanted letters below</h4>
     <h4>   \/</h4>
-    <div  id="dropAreaBin"><img src="trash.jpg" alt="trash can"></div>
+    <div  id="dropAreaBin"><img src="static/trash.jpg" alt="trash can"></div>
 </body>
 </html>
